// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ddbjson CLI marshall command success should print JSON when get argument is an object in given JSON file 1`] = `
[
  {
    "array": {
      "L": [
        {
          "S": "a"
        },
        {
          "S": "b"
        },
        {
          "S": "c"
        }
      ]
    },
    "subobject": {
      "M": {
        "key1": {
          "S": "value1"
        },
        "key2": {
          "S": "value2"
        }
      }
    }
  }
]
`;

exports[`ddbjson CLI marshall command success should print JSON when get argument is an object in given JSON stdin 1`] = `
[
  {
    "foo": {
      "S": "baz"
    }
  }
]
`;

exports[`ddbjson CLI marshall command success should print JSON when get argument is an object in given JSON string 1`] = `
[
  {
    "test": {
      "S": "value"
    }
  }
]
`;

exports[`ddbjson CLI marshall command success should print JSON when valid JSON file is given 1`] = `
[
  {
    "object": {
      "M": {
        "array": {
          "L": [
            {
              "S": "a"
            },
            {
              "S": "b"
            },
            {
              "S": "c"
            }
          ]
        },
        "subobject": {
          "M": {
            "key1": {
              "S": "value1"
            },
            "key2": {
              "S": "value2"
            }
          }
        }
      }
    },
    "number": {
      "N": "1"
    },
    "string": {
      "S": "string"
    },
    "boolean": {
      "BOOL": true
    },
    "null": {
      "NULL": true
    }
  }
]
`;

exports[`ddbjson CLI marshall command success should print JSON when valid JSON stdin is given 1`] = `
[
  {
    "foo": {
      "S": "bar"
    },
    "baz": {
      "N": "123"
    }
  }
]
`;

exports[`ddbjson CLI marshall command success should print JSON when valid JSON string is given 1`] = `
[
  {
    "foo": {
      "S": "bar"
    }
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when get argument is an object in given JSON file 1`] = `
[
  {
    "array": [
      "a",
      "b",
      "c"
    ],
    "subobject": {
      "key1": "value1",
      "key2": "value2"
    }
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when get argument is an object in given JSON stdin 1`] = `
[
  {
    "foo": "baz"
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when get argument is an object in given JSON string 1`] = `
[
  {
    "test": "value"
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when valid JSON file is given 1`] = `
[
  {
    "object": {
      "array": [
        "a",
        "b",
        "c"
      ],
      "subobject": {
        "key1": "value1",
        "key2": "value2"
      }
    },
    "number": 1,
    "string": "string",
    "boolean": true,
    "null": null
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when valid JSON stdin is given 1`] = `
[
  {
    "foo": "bar",
    "baz": 123
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when valid JSON string is given 1`] = `
[
  {
    "foo": "bar"
  }
]
`;
